update opportunities